@@ -1,6 +1,9 @@
 v3.5.6 (XXXX-XX-XX)
 -------------------
 
+* Internal issue BTS-71: Added a precondition to prevent creating a collection
+  with an invalid `distributeShardsLike` property.
+
 * Internal issue BTS-71: In a cluster, for collections in creation, suspend
   supervision jobs concerning replication factor until creation is completed.
   Previously, it could cause collection creation to fail (e.g. when a server
